# HB-LDE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  win-dsa_pub.pem
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  auth-listener.cpp  lde-authors.cpp  lde-authors.hpp  lde-license.cpp  lde-license.hpp  lde-log-uploader.cpp  lde-log-uploader.hpp  lde-splash-screen.cpp  lde-splash-screen.hpp  log-viewer.cpp  media-controls.cpp  media-controls.hpp  obs-app.cpp  obs-app.hpp  obs-stats-macos.mm  obs-stats-windows.cpp  obs-stats.cpp  obs.rc.in  platform-osx.mm  platform.hpp  remote-text.cpp  remote-text.hpp  source-tree.cpp  source-tree.hpp  volume-control.cpp  volume-control.hpp  window-basic-about.cpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-main-dropfiles.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  (+11 more)
UI/cmake/: legacy.cmake  os-macos.cmake  os-windows.cmake  ui-elements.cmake  ui-qt.cmake  ui-windows.cmake
UI/cmake/linux/: com.obsproject.Studio.appdata.xml.in
UI/cmake/macos/: Info.plist.in
UI/cmake/windows/: obs.manifest  obs.rc.in
UI/data/locale/: af-ZA.ini  an-ES.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  is-IS.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  lo-LA.ini  lt-LT.ini  (+29 more)
UI/data/themes/: Acri.qss  Dark.qss  Grey.qss  Light.qss  Rachni.qss  System.qss  Yami.qss
UI/forms/: LdeAuthors.ui  LdeLicense.ui  LdeLogUploader.ui  OBSAbout.ui  OBSBasic.ui  OBSBasicSettings.ui  OBSPermissions.ui  OBSUpdate.ui  StatusBarWidget.ui  obs.qrc
UI/forms/source-toolbar/: media-controls.ui
UI/frontend-plugins/decklink-captions/: decklink-captions.cpp
UI/frontend-plugins/decklink-output-ui/: decklink-ui-main.cpp
UI/frontend-plugins/frontend-tools/: auto-scene-switcher.cpp  captions.cpp  output-timer.cpp
UI/frontend-plugins/frontend-tools/data/locale/: af-ZA.ini  ar-SA.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kmr-TR.ini  ko-KR.ini  mn-MN.ini  ms-MY.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sl-SI.ini  sv-SE.ini  tr-TR.ini  uk-UA.ini  (+3 more)
UI/importers/: studio.cpp
UI/update/: mac-update.cpp  mac-update.hpp  shared-update.cpp  sparkle-updater.mm  update-window.cpp  update-window.hpp  win-update.cpp  win-update.hpp
UI/win-update/updater/: http.cpp  updater.cpp  updater.rc
UI/xdg-data/: com.obsproject.Studio.appdata.xml.in
build-aux/steam/scripts_windows/: install.bat  uninstall.bat
cmake/Modules/: ObsDefaults_Windows.cmake  ObsDefaults_macOS.cmake  VersionConfig.cmake
cmake/bundle/windows/: ALL_BUILD.vcxproj.user.in
cmake/common/: bootstrap.cmake  helpers_common.cmake
cmake/macos/: helpers.cmake
cmake/macos/resources/: AppIcon.icns
docs/sphinx/: reference-sources.rst
libobs/: obs-scene.c  obs-source.c  obs.c  obs.h
libobs-d3d11/: d3d11-shader.cpp  d3d11-subsystem.cpp
libobs/pkgconfig/: libobs.pc.in
plugins/: CMakeLists.txt
plugins/aja/data/locale/: ko-KR.ini
plugins/bozbez-win-capture-audio/: CMakeLists.txt
plugins/bozbez-win-capture-audio/src/: audio-capture-helper.cpp  audio-capture.cpp  mixer.cpp  mixer.hpp
plugins/coreaudio-encoder/data/locale/: an-ES.ini  ar-SA.ini  az-AZ.ini  be-BY.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  (+45 more)
plugins/image-source/: obs-slideshow.c
plugins/lbs2-ndi/src/: obs-ndi-source.cpp  plugin-main.cpp
plugins/linux-jack/: jack-input.c
plugins/linux-pipewire/: screencast-portal.c
plugins/mac-capture/: mac-audio.c  mac-sck-audio-capture.m  mac-sck-common.h  mac-sck-common.m  mac-sck-video-capture.m  plugin-main.c
plugins/mac-videotoolbox/: encoder.c
plugins/obs-browser/data/: error.html
plugins/obs-browser/panel/: browser-panel.cpp
plugins/obs-ffmpeg/: obs-ffmpeg-av1.c  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-source.c
plugins/obs-outputs/: ftl-stream.c
plugins/obs-vst/: CMakeLists.txt  VSTPlugin.cpp
plugins/obs-websocket/src/: obs-websocket.cpp
plugins/obs-x264/: obs-x264.c
plugins/rtmp-services/: rtmp-common.c  rtmp-custom.c
plugins/text-freetype2/: text-freetype2.c
plugins/vlc-video/: vlc-video-source.c
plugins/win-capture/graphics-hook/: graphics-hook.rc
plugins/win-dshow/virtualcam-module/: virtualcam-filter.cpp
(+442 files in other folders)
